--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
   },
   "newProjectRoot": "projects",
   "projects": {
-    "asociacion-musica": {
+    "memocracia": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -65,10 +65,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "asociacion-musica:build:production"
+              "buildTarget": "memocracia:build:production"
             },
             "development": {
-              "buildTarget": "asociacion-musica:build:development"
+              "buildTarget": "memocracia:build:development"
             }
           },
           "defaultConfiguration": "development"
